--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,17 @@
+.idea/
+target/
+# Eclipse
+.project
+.classpath
+.settings/
+#vs code
+.vscode/
 # Compiled class file
 *.class
 
 # Log file
 *.log
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
 
 # Package Files #
 *.jar
